@@ -11,14 +11,6 @@ const childrenIcon = (
   <Icon name="folder-inverse" />
 );
 
-const editIcon = (
-  <Icon name="edit" title={STRINGS.EDIT} />
-);
-
-const nextIcon = (
-  <Icon name="arrow-right" title={STRINGS.SEE_CHILDREN} />
-);
-
 /**
  * One menu item in the page explorer, with different available actions
  * and information depending on the metadata of the page.
@@ -47,7 +39,7 @@ const ExplorerItem = ({ item, onClick }) => {
         href={`${ADMIN_URLS.PAGES}${id}/edit/`}
         className="c-explorer__item__action c-explorer__item__action--small"
       >
-        {editIcon}
+        <Icon name="edit" title={STRINGS.EDIT_PAGE.replace('{title}', title)} />
       </Button>
       {hasChildren ? (
         <Button
@@ -55,7 +47,7 @@ const ExplorerItem = ({ item, onClick }) => {
           onClick={onClick}
           href={`${ADMIN_URLS.PAGES}${id}/`}
         >
-          {nextIcon}
+          <Icon name="arrow-right" title={STRINGS.VIEW_CHILD_PAGES_OF_PAGE.replace('{title}', title)} />
         </Button>
       ) : null}
     </div>
